# anthrokit

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
XAIagent/: README.md  test_session_data.jsonl
XAIagent/.streamlit/: README.md  secrets.toml.example
XAIagent/assets/: embed_wrapper.html
XAIagent/config/: anthrokit.py  developer_prompt.txt  system_prompt.txt  system_prompt_high.txt  system_prompt_low.txt
XAIagent/environments/: environment_rtx5070.yml
XAIagent/scripts/deployment/: deploy_to_huggingface.sh
XAIagent/src/: ab_config.py  agent.py  app.py  app_adaptive.py  app_condition_2.py  app_condition_3.py  app_condition_4.py  app_condition_5.py  app_condition_5_personality.py  app_nonanthro.py  app_nonanthro_personalize.py  app_v0.py  app_v1.py  app_v1_personality.py  interaction_logger.py  knowledge_base.py  knowledge_base.yaml  load_adult_data.py  loan_assistant.py  natural_conversation.py  nlu.py  preprocessing.py  shap_visualizer.py
anthrokit/: __init__.py  adaptive.py  anthrokit.yaml  config.py  integrations.py  personality.py  prompts.py  scaffolds.py  stylizer.py  tracking.py  validators.py
anthrokit/api/: __init__.py  main.py  schemas.py
anthrokit/tools/: analytics_dashboard.py
